@startuml
skinparam classAttributeIconSize 0

class State {
  -organs_dict
  +add_organ(name: str, organ: obj): None
  +remove_organ(name: str): None
}

class Government {
  #prime_minister
  #deputy_prime_minister
  #ministers
  +review_bill(number: int): bool
  +initiate_bill(number: int, title: str): None
  +change_min_salary(new_value: float): str
}

class Parliament {
  +give_consent_for_pm_appointment(name: str): bool
  +initiate_bill(number: int, title: str): None
  +review_bill(number: int): bool
  +approve_budget(amount: float): bool 
}
' #infrastructure 

class President {
  -name
  -age
  +appoint_prime_minister(name: str): str
  +approve_state_budget(new_value: float): str   
  +approve_bill(number: int): str
  +initiate_bill(number: int, title: str): None
}
' republican budget

class Bill {
  -title
  -number
  -description
  +under_review
} 

class Law {
  -active
  +activate_law(number: int): str
}

class Citizens {
  -total_population
  -unemployable_ratio
  +average_salary
  +pay_taxes(percent: float): float
  +initiate_bill(number: int) -> str
}

class Infrastructure{
  -total_road_length
  -social_buildings_count
  -electricity_and_water_supply
  -update(budget: float): str
}

class Economy{
  -state
  -inflation_rate
  -state_budget
  -income_tax
  +taxation(percent: float): float
  +allocate_budget(): float
  +add_to_budget(amount: float): str
  +subtract_from_budget(amount: float): str
}

class Constitution{
  -laws_count
  -sections
  -adoption_date
  -highest_legal_force
  +add_law(number: int): str
  +remove_law(number: int): str
}

interface Bill_Initiator {
  initiate_bill()
}
interface Bill_Reviewer {
  review_bill()
}

abstract class Legal_Act{

}


State "1" *-- "1" Government
State "1" *-- "1" Parliament
State "1" *-- "1" President
State "1" *-- "1" Constitution
State "1" *-- "1" Economy
State "1" *-- "1" Infrastructure
State "1" *-- "1" Citizens
Constitution "1" o-- "1..*" Law

' Law "1" --|> "1" Bill: inherits

Law ..|> Legal_Act
Bill ..|> Legal_Act

President ..|> Bill_Initiator
Citizens ..|> Bill_Initiator
Parliament ..|> Bill_Initiator
Government ..|> Bill_Initiator

President ..|> Bill_Reviewer
Parliament ..|> Bill_Reviewer
Government ..|> Bill_Reviewer

' ClassName1 o-- ClassName2
' ClassName1 *-- ClassName2
' ClassName3 --|> ClassName4: inherits



@enduml
